# ndk-someiplib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindBoost.cmake
ndk-vsomeip/: build.gradle  settings.gradle
ndk-vsomeip/app/: .gitignore  build.gradle
ndk-vsomeip/app/src/androidTest/java/com/lxl/someipdemo/: ExampleInstrumentedTest.java
ndk-vsomeip/app/src/main/: AndroidManifest.xml
ndk-vsomeip/app/src/main/java/com/lxl/someipdemo/: DemoClient.java  DemoClientListener.java  DemoConfig.java  DemoService.java  DemoServiceListener.java  MainActivity.java
ndk-vsomeip/app/src/main/res/layout/: activity_main.xml
ndk-vsomeip/app/src/main/res/values/: strings.xml  themes.xml
ndk-vsomeip/app/src/main/res/values-night/: themes.xml
ndk-vsomeip/app/src/test/java/com/lxl/someipdemo/: ExampleUnitTest.java
ndk-vsomeip/gradle/wrapper/: gradle-wrapper.properties
ndk-vsomeip/someiplib/: build.gradle
ndk-vsomeip/someiplib/src/androidTest/java/com/lxl/someiplib/: ExampleInstrumentedTest.java
ndk-vsomeip/someiplib/src/main/: AndroidManifest.xml
ndk-vsomeip/someiplib/src/main/cpp/: CMakeLists.txt  VSomeIPClientJNI.cpp  VSomeIPServiceJNI.cpp
ndk-vsomeip/someiplib/src/main/cpp/include/: NativeLog.h  context.h
ndk-vsomeip/someiplib/src/main/java/com/lxl/someiplib/: ClientHandler.java  ServiceHandler.java  SomeIPClient.java  SomeIPService.java
ndk-vsomeip/someiplib/src/test/java/com/lxl/someiplib/: ExampleUnitTest.java
